# Parsed

./: .gitignore  README.md  pyproject.toml
mail_parsing/: setup.py
mail_parsing/mail_parser/: __init__.py  enums.py  model.py  test.py  utils.py
mail_parsing/mail_parser/mail/: exceptions.py  parser.py
mail_parsing/mail_parser/thread/: __init__.py  model.py
parsed/: __init__.py  enums.py  utils.py
parsed/converters/: toEmailMessage.py
parsed/file/: model.py
parsed/mail/: __init__.py  exceptions.py  model.py  parser.py  parsing_utils.py
parsed/thread/: __init__.py  enums.py  model.py  parser.py
tests/: profiling.py  test interactions.py  test.py  timing.py
