[tool.poetry]
name = "parsed"
version = "0.1.0"
description = "Mail specific parsing library"
authors = ["Zappa francesco.zappacosta96@gmail.com"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.2"
ruff = "^0.4.6"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
