[tool.poetry]
name = "parsed"
version = "0.1.0"
description = "Mail specific parsing library"
authors = ["Zappa francesco.zappacosta96@gmail.com"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
tdqm = "^0.0.1"
ruff = "^0.5.5"
mypy = "^1.11.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
